# Sprint_7

./: .editorconfig  .env  .gitignore  conftest.py  pyproject.toml
allure-results/: 039cee5d-e1e2-4081-ac4a-35b967de21b0-container.json  045e2ce3-aa84-41f9-a91e-5b16afb28de7-result.json  062ba28f-dccd-49ed-a420-cc335ee37e5e-result.json  06a5322a-4704-4f6a-8c8f-9f23dc15ae42-container.json  06d580a4-86bc-4eec-908b-264cffc91bc8-container.json  0864517a-9d8f-4974-b598-6e86ce3ffbeb-container.json  09efed9e-7b0c-4272-8bb4-b931262e891b-container.json  0a9ec603-074f-4b37-880a-a901d9707347-result.json  0dd8f3b8-976c-45c4-bd65-c6b70c252ce1-container.json  0ef22e00-f95c-4581-a092-fcd946ebb2f0-container.json  107ef1b2-fc02-4a0f-80d0-2e49de32ff80-container.json  133fbe80-5077-4282-a345-74631d9ab8d4-container.json  14fb3e35-b90c-40ec-9223-ecfd2b8d995b-result.json  167b5b7c-f04f-4b2e-8999-1455f13785ed-result.json  18dd4aa6-6c7f-4e7e-a280-522821ceee4a-result.json  1c956ff2-c407-4be8-8167-5ab02b5c1833-result.json  1fa00628-9845-4b00-9ebf-cfbd2f3b3ba1-result.json  20154eee-6a7d-4884-a5ab-0d0d4b5bccbb-container.json  20d5bb03-3f43-4179-b01b-2cc3ba34b9e1-attachment.txt  223340e6-e367-42f9-aff8-a1fec6273ae5-container.json  23814021-e5f9-4ef5-ae43-7fad9905cabc-container.json  23acc1ea-9df0-4e8b-85a8-4405e2a29de0-container.json  26df3e24-c051-41d4-afb6-6c8f32ff79fe-container.json  28b32069-5db2-49a2-bcd0-b750a1a4d889-result.json  2b386b53-fd8e-4552-aac6-48d38e7b1099-container.json  2c3e8440-dc3d-4432-ad80-4a3d21304656-container.json  2ce3cd0e-d7bc-4c1a-ab35-e6c5b54d9426-container.json  (+102 more)
(+29 files in other folders)
